New MB build and deploy